--- a/css/default.css
+++ b/css/default.css
@@ -22,88 +22,56 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-Light-webfont.eot');
-	src: url('../fonts/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-Light-webfont.woff') format('woff'),
-		url('../fonts/Roboto-Light-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-Light-webfont.svg#robotolight') format('svg');
+	src: url('../fonts/Roboto-Light-webfont.woff');
 	font-weight: 300;
 	font-style: normal;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-Regular-webfont.eot');
-	src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
-		url('../fonts/Roboto-Regular-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+	src: url('../fonts/Roboto-Regular-webfont.woff');
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-Medium-webfont.eot');
-	src: url('../fonts/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-Medium-webfont.woff') format('woff'),
-		url('../fonts/Roboto-Medium-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-Medium-webfont.svg#robotomedium') format('svg');
+	src: url('../fonts/Roboto-Medium-webfont.woff');
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-Bold-webfont.eot');
-	src: url('../fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-Bold-webfont.woff') format('woff'),
-		url('../fonts/Roboto-Bold-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
+	src: url('../fonts/Roboto-Bold-webfont.woff');
 	font-weight: 700;
 	font-style: normal;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-LightItalic-webfont.eot');
-	src: url('../fonts/Roboto-LightItalic-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-LightItalic-webfont.woff') format('woff'),
-		url('../fonts/Roboto-LightItalic-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-LightItalic-webfont.svg#robotolight_italic') format('svg');
+	src: url('../fonts/Roboto-LightItalic-webfont.woff');
 	font-weight: 300;
 	font-style: italic;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-Italic-webfont.eot');
-	src: url('../fonts/Roboto-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-Italic-webfont.woff') format('woff'),
-		url('../fonts/Roboto-Italic-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-Italic-webfont.svg#robotoitalic') format('svg');
+	src: url('../fonts/Roboto-Italic-webfont.woff');
 	font-weight: 400;
 	font-style: italic;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-MediumItalic-webfont.eot');
-	src: url('../fonts/Roboto-MediumItalic-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-MediumItalic-webfont.woff') format('woff'),
-		url('../fonts/Roboto-MediumItalic-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-MediumItalic-webfont.svg#robotomedium_italic') format('svg');
+	src: url('../fonts/Roboto-MediumItalic-webfont.woff');
 	font-weight: 500;
 	font-style: italic;
 }
 @font-face
 {
 	font-family: "Roboto";
-	src: url('../fonts/Roboto-BoldItalic-webfont.eot');
-	src: url('../fonts/Roboto-BoldItalic-webfont.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Roboto-BoldItalic-webfont.woff') format('woff'),
-		url('../fonts/Roboto-BoldItalic-webfont.ttf') format('truetype'),
-		url('../fonts/Roboto-BoldItalic-webfont.svg#robotobold_italic') format('svg');
+	src: url('../fonts/Roboto-BoldItalic-webfont.woff');
 	font-weight: 700;
 	font-style: italic;
 }
