--- a/css/default_integration.css
+++ b/css/default_integration.css
@@ -1,180 +1,1 @@
-.integration_d
-{
-	position: absolute;
-	display: none;
-	overflow: hidden;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 49px;
-	background: #f0f0f0;
-	color: #FFFFFF;
-	border-right: 1px solid #c0c0c0;
-	z-index: 26;
-	padding-top: 3px;
-	cursor: default;
-
-	user-select: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-}
-
-.integration_d div
-{
-	display: none;
-	height: 36px;
-	width: 36px;
-	padding: 7px 7px;
-	cursor: pointer;
-}
-
-.integration_d .intBlank
-{
-	cursor: default;
-}
-
-#intCaldav
-{
-	background: url(../images/banner_calendar.svg) no-repeat center;
-}
-
-#intCaldavTodo
-{
-	background: url(../images/banner_todo.svg) no-repeat center;
-}
-
-#intCarddav
-{
-	background: url(../images/banner_addressbook.svg) no-repeat center;
-}
-
-#intProjects
-{
-	background: url(../images/banner_projects.svg) no-repeat center;
-}
-
-#intReports
-{
-	background: url(../images/banner_reports.svg) no-repeat center;
-}
-
-#intSettings
-{
-	background: url(../images/banner_settings.svg) no-repeat center;
-}
-
-#intRefresh
-{
-	background: url(../images/banner_refresh.svg) no-repeat center;
-}
-
-#intLogout
-{
-	background: url(../images/banner_logout.svg) no-repeat center;
-}
-
-.int_error
-{
-	display: none;
-	margin: 28px 0px 0px 28px;
-}
-
-#resourceCalDAV_h, #resourceCalDAVTODO_h, #ResourceCalDAVList, #ResourceCalDAVTODOList, #timezoneWrapper, #timezoneWrapperTODO
-{
-	left: 50px;
-}
-
-#main, #main_h, #searchForm, #mainTODO, #main_h_TODO, #searchFormTODO
-{
-	left: 274px;
-}
-
-#MainLoader, #EventDisabler, #TodoDisabler, #AlertDisabler, #ProjectsDisabler
-{
-	left: 50px;
-}
-
-#CalendarLoader, #CalendarLoaderTODO
-{
-	left: 275px;
-}
-
-.resourcesCardDAV_d, #ResourceCardDAVList, #ResourceCardDAVListOverlay
-{
-	left: 50px;
-}
-
-.collection_d, #SearchBox, #ABList, #ABListOverlay, #AddressbookOverlay
-{
-	left: 275px;
-}
-
-/*.contact_d, #ABContactColor, #ABContactOverlay, #ABMessage
-{
-	left: 526px;
-}
-
-#ABContact
-{
-	left: 529px;
-}*/
-
-.filters_d, .statistics_d, #FilterList, #ProjectsData, #SystemProjectsLock, #SystemReportsLock, #ProjectListDisabler
-{
-	left: 50px;
-}
-
-.projects_d, #ProjectList, #SearchBoxProject, #ProjectListOverlay
-{
-	left: 375px;
-}
-
-.project_d, #ProjectForm, #ProjectFormLoader, #ProjectEventsContainer, #ActivityListDisabler, #ProjectFormMessage
-{
-	left: 626px;
-}
-
-.resourcesReports_d, #ResourceReportsList
-{
-	left: 50px;
-}
-
-.resourcesSettings_d, #ResourceSettingsList
-{
-	left: 50px;
-}
-
-#ResourceReportsListOverlay
-{
-	left: 50px;
-}
-
-.report_filters_d, #ReportFilterList
-{
-	left: 275px;
-}
-
-.reports_d, #ReportsColor, #ReportsFormOverlay
-{
-	left: 600px;
-}
-
-#ReportsForm
-{
-	left: 603px;
-}
-
-#ResourceSettingsListOverlay
-{
-	left: 50px;
-}
-
-.settings_d, #SettingsColor, #SettingsFormOverlay
-{
-	left: 275px;
-}
-
-#SettingsForm
-{
-	left: 278px;
-}
+.integration_d{position:absolute;display:none;overflow:hidden;top:0;bottom:0;left:0;width:49px;background:#f0f0f0;color:#fff;border-right:1px solid silver;z-index:26;padding-top:3px;cursor:default;user-select:none;-webkit-user-select:none;-moz-user-select:none}.integration_d div{display:none;height:36px;width:36px;padding:7px 7px;cursor:pointer}.integration_d .intBlank{cursor:default}#intCaldav{background:url(../images/banner_calendar.svg) no-repeat center}#intCaldavTodo{background:url(../images/banner_todo.svg) no-repeat center}#intCarddav{background:url(../images/banner_addressbook.svg) no-repeat center}#intProjects{background:url(../images/banner_projects.svg) no-repeat center}#intReports{background:url(../images/banner_reports.svg) no-repeat center}#intSettings{background:url(../images/banner_settings.svg) no-repeat center}#intRefresh{background:url(../images/banner_refresh.svg) no-repeat center}#intLogout{background:url(../images/banner_logout.svg) no-repeat center}.int_error{display:none;margin:28px 0 0 28px}#ResourceCalDAVList,#ResourceCalDAVTODOList,#resourceCalDAVTODO_h,#resourceCalDAV_h,#timezoneWrapper,#timezoneWrapperTODO{left:50px}#main,#mainTODO,#main_h,#main_h_TODO,#searchForm,#searchFormTODO{left:274px}#AlertDisabler,#EventDisabler,#MainLoader,#ProjectsDisabler,#TodoDisabler{left:50px}#CalendarLoader,#CalendarLoaderTODO{left:275px}#ResourceCardDAVList,#ResourceCardDAVListOverlay,.resourcesCardDAV_d{left:50px}#ABList,#ABListOverlay,#AddressbookOverlay,#SearchBox,.collection_d{left:275px}#FilterList,#ProjectListDisabler,#ProjectsData,#SystemProjectsLock,#SystemReportsLock,.filters_d,.statistics_d{left:50px}#ProjectList,#ProjectListOverlay,#SearchBoxProject,.projects_d{left:375px}#ActivityListDisabler,#ProjectEventsContainer,#ProjectForm,#ProjectFormLoader,#ProjectFormMessage,.project_d{left:626px}#ResourceReportsList,.resourcesReports_d{left:50px}#ResourceSettingsList,.resourcesSettings_d{left:50px}#ResourceReportsListOverlay{left:50px}#ReportFilterList,.report_filters_d{left:275px}#ReportsColor,#ReportsFormOverlay,.reports_d{left:600px}#ReportsForm{left:603px}#ResourceSettingsListOverlay{left:50px}#SettingsColor,#SettingsFormOverlay,.settings_d{left:275px}#SettingsForm{left:278px}
